# IndieStudio

./: .gitignore  CMakeLists.txt  Cmake_script.sh  bomberman
MENUU/: main.cpp  menu.hpp  music.hpp
assets/: bob.iqm  indio.iqm  robo2.iqm  robo3.iqm  robo4.iqm  robo5.iqm  robo6.iqm  robo7.iqm  test.gltf
include/: CreateWindow.hpp
make/: CMakeLists.txt
map/: perfect_map.txt
src/: file.cpp  main.cpp  music.cpp
src/AI/: AI.cpp  AI.hpp  operator.hpp
src/core/: Core.cpp  Core.hpp  Error.hpp  Time.hpp  main.cpp
src/games/: IGame.hpp
src/games/AI/: AI.cpp  AI.hpp
src/games/Background/: Background.hpp
src/games/Bomb/: Bomb.cpp  Bomb.hpp
src/games/Box/: Box.cpp  Box.hpp
src/games/Camera/: Camera.cpp  Camera.hpp
src/games/Map/: Map.cpp  Map.hpp
src/games/Player/: Buff.cpp  Buff.hpp  Player.cpp  Player.hpp
src/games/Score/: Score.cpp  Score.hpp
src/graphicals/: IGraphic.hpp  Raylib.cpp  Raylib.hpp  RaylibException.hpp  Window.hpp
src/graphicals/Draw/: Draw.cpp  Draw.hpp  Intro.cpp
src/menu/: functionnalities.cpp  initialisation.cpp  menu.cpp  menu.hpp  music.cpp
src/objects/: IObject.hpp  Object.hpp  Sound.hpp  Sprite.hpp  Text.hpp
